# rpi-pico2w-freertos-hwdebug-1

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  justfile  rust-port.md
doc/: dependency-versions.md  hardware.md  nix-environment.md  vscode-debugging.md
src/: CMakeLists.txt  FreeRTOSConfig.h  debug_log.hpp  led.cpp  led.hpp  lwipopts.h  main.cpp  scan_msg.hpp  wifi_scan.c  wifi_scan.h  wifi_scanner.cpp  wifi_scanner.hpp  wifi_task.c  wifi_task.h
test/: CMakeLists.txt  CMakePresets.json  test_harness.hpp  test_integration.cpp  test_unit.cpp
tools/: common.py  flash.py  lint.sh  pico.py  serial_util.py  setup_ide.py  setup_openocd.py  setup_sdk.py  setup_udev.py  setup_vscode.py
